--- a/waybar/style.css
+++ b/waybar/style.css
@@ -50,7 +50,7 @@ window#waybar {
 }
 
 #workspaces button.active {
-  background-color: @fg_gutter;
+  border-bottom: 3px solid @cyan;
 }
 
 #custom-powerline-1-tail,
