switch waybar colors

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,44 +1,12 @@
-@define-color bg #222436;
-@define-color bg_dark #1e2030;
-@define-color bg_highlight #2f334d;
-@define-color blue #82aaff;
-@define-color blue0 #3e68d7;
-@define-color blue1 #65bcff;
-@define-color blue2 #0db9d7;
-@define-color blue5 #89ddff;
-@define-color blue6 #b4f9f8;
-@define-color blue7 #394b70;
-@define-color comment #636da6;
-@define-color cyan #86e1fc;
-@define-color dark3 #545c7e;
-@define-color dark5 #737aa2;
-@define-color fg #c8d3f5;
-@define-color fg_dark #828bb8;
-@define-color fg_gutter #3b4261;
-@define-color green #c3e88d;
-@define-color green1 #4fd6be;
-@define-color green2 #41a6b5;
-@define-color magenta #c099ff;
-@define-color magenta2 #ff007c;
-@define-color orange #ff966c;
-@define-color purple #fca7ea;
-@define-color red #ff757f;
-@define-color red1 #c53b53;
-@define-color teal #4fd6be;
-@define-color terminal_black #444a73;
-@define-color yellow #ffc777;
+@define-color background #0b090a;
+@define-color foreground #edf2f4;
 
-@define-color background @bg;
-@define-color foreground @fg_gutter;
-
-@define-color accent @cyan;
-@define-color accent_dark @blue0;
-
-@define-color powerline-1 @cyan;
-@define-color powerline-2 @fg;
-@define-color powerline-3 @fg;
-@define-color powerline-4 @fg_dark;
-@define-color powerline-5 @cyan;
+@define-color powerline-1 #dd2d3a;
+@define-color powerline-2 #880d1e;
+@define-color powerline-3 #003554;
+@define-color powerline-4 #006494;
+@define-color powerline-5 #0582ca;
+@define-color powerline-6 #00a6fb;
 
 * {
   font-family: "0xProto Nerd Font Mono";
@@ -53,8 +21,8 @@ window#waybar {
   background-color: @background;
 }
 
-#workspaces button.active {
-  border-bottom: 1px solid @accent_dark;
+#workspaces button.focused {
+  border-bottom: 2px solid @foreground;
 }
 
 #custom-powerline-1-tail,
@@ -102,11 +70,21 @@ window#waybar {
   color: @powerline-5;
 }
 
+#custom-powerline-6-tail,
+#wireplumber {
+  background-color: @powerline-6;
+}
+
+#custom-powerline-6-head {
+  color: @powerline-6;
+}
+
 #custom-powerline-1-tail,
 #custom-powerline-2-tail,
 #custom-powerline-3-tail,
 #custom-powerline-4-tail,
-#custom-powerline-5-tail {
+#custom-powerline-5-tail,
+#custom-powerline-6-tail {
   color: @background;
 }
 
@@ -118,6 +96,8 @@ window#waybar {
 #custom-powerline-4-head,
 #custom-powerline-4-tail,
 #custom-powerline-5-head,
-#custom-powerline-5-tail {
+#custom-powerline-5-tail,
+#custom-powerline-6-head,
+#custom-powerline-6-tail {
   font-size: 22px;
 }
